@@ -1524,9 +1524,11 @@ operandOperation (operand * left, operand * right, int op, sym_link * type)
       retval = operandFromLit (operandLitValue (left) || operandLitValue (right));
       break;
     case ROT:
-      TYPE_TARGET_ULONG i = (TYPE_TARGET_ULONG) double2ul (operandLitValue (left));
-      unsigned s = operandLitValue (right) >= 0 ? operandLitValue (right) : bitsForType (operandType (left)) - operandLitValue (right);
-      retval = operandFromLit ((i << s) | (i >> (bitsForType (operandType (left)) - s)));
+      {
+        TYPE_TARGET_ULONG i = (TYPE_TARGET_ULONG) double2ul (operandLitValue (left));
+        unsigned s = operandLitValue (right) >= 0 ? operandLitValue (right) : bitsForType (operandType (left)) - operandLitValue (right);
+        retval = operandFromLit ((i << s) | (i >> (bitsForType (operandType (left)) - s)));
+      }
       break;
     case GETABIT:
       retval = operandFromLit (((TYPE_TARGET_ULONG) double2ul (operandLitValue (left)) >>
