@@ -304,9 +304,11 @@ hasExtBitOp (int op, sym_link *left, int right)
     case GETWORD:
       return true;
     case ROT:
-      unsigned int lbits = bitsForType (left);
-      if (right % lbits  == 1 || right % lbits == lbits - 1)
-        return (true);
+      {
+        unsigned int lbits = bitsForType (left);
+        if (right % lbits  == 1 || right % lbits == lbits - 1)
+          return (true);
+      }
       return false;
     }
   return false;
