@@ -396,15 +396,17 @@ hasExtBitOp (int op, sym_link *left, int right)
     case GETWORD:
       return (true);
     case ROT:
-      unsigned int lbits = bitsForType (left);
-      if (lbits % 8)
-        return (false);
-      if (size <= 1)
-        return (true);
-      if (size <= 2 && (right % lbits  == 1 || right % lbits == lbits - 1))
-        return (true);
-      if ((size <= 2 || size == 4) && lbits == right * 2)
-        return (true);
+      {
+        unsigned int lbits = bitsForType (left);
+        if (lbits % 8)
+          return (false);
+        if (size <= 1)
+          return (true);
+        if (size <= 2 && (right % lbits  == 1 || right % lbits == lbits - 1))
+          return (true);
+        if ((size <= 2 || size == 4) && lbits == right * 2)
+          return (true);
+      }
       return (false);
     }
 
